<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EDF2"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/icon">

        <androidx.cardview.widget.CardView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#43A336"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/user_avatar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_person_24" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="surname"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/emailEditTextReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditTextReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repeatedPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/sing_up" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>